kubernetes/tekton-workload/deploy-func-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-func-app-listener-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-deploy-func-app-listener
            port:
              number: 8080
